--- a/platformio.ini
+++ b/platformio.ini
@@ -35,14 +35,11 @@ common_flags =
 platform = ststm32
 board = genericSTM32F103C8
 framework = libopencm3
-build_src_filter = +<cars/>
+build_src_filter = +<./>-<cars/>-<vw_nc03/>-<qemu/>
 
 build_flags =
   ${common.common_flags}
   -DSTM32F1
-  -I.
-  -Iinclude
-  -Ilibopencm3/include
 
 [env:qemu]
 platform = ststm32
@@ -52,9 +49,6 @@ build_src_filter = +<./>-<cars/>-<volvo_od2/>-<vw_nc03/>
 build_flags =
   ${common.common_flags}
   -DSTM32F1
-  -I.
-  -Iinclude
-  -Ilibopencm3/include
   -Iqemu/fw
   -Wl,-Map=.pio/build/qemu/qemu.map
   -Tqemu/fw/stm32vldiscovery.ld
@@ -67,7 +61,7 @@ debug_server =
 	-kernel
 	.pio/build/qemu/firmware.elf
 	-serial
-	tcp::2345,server,nowait
+	telnet::4321,server,nowait
 	-display
 	none
 	-S
