--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,6 @@
 
 [platformio]
 default_envs = qemu
-src_dir = ${PROJECT_DIR}
 
 [common]
 common_flags =
@@ -30,41 +29,45 @@ common_flags =
   -Wshadow
   -Wredundant-decls
 
-
 [env:genericSTM32F103C8]
 platform = ststm32
 board = genericSTM32F103C8
 framework = libopencm3
-build_src_filter = +<./>-<cars/>-<vw_nc03/>-<qemu/>
-
 build_flags =
   ${common.common_flags}
   -DSTM32F1
+  -Iinclude
+src_filter =
+  +<./>
+  +<../volvo_od2/>
+  -<cars/>
 
 [env:qemu]
 platform = ststm32
 board = disco_f100rb
 framework = libopencm3
-build_src_filter = +<./>-<cars/>-<volvo_od2/>-<vw_nc03/>
 build_flags =
   ${common.common_flags}
   -DSTM32F1
-  -Iqemu/fw
   -Wl,-Map=.pio/build/qemu/qemu.map
   -Tqemu/fw/stm32vldiscovery.ld
+src_filter =
+  +<./>
+  +<../qemu/>
+  -<cars/>
 
 debug_tool = custom
 debug_server = 
-	qemu-system-arm
-	-M
-	stm32vldiscovery
-	-kernel
-	.pio/build/qemu/firmware.elf
-	-serial
-	telnet::4321,server,nowait
-	-display
-	none
-	-S
-	-gdb
-	tcp::1234
+  qemu-system-arm
+  -M
+  stm32vldiscovery
+  -kernel
+  .pio/build/qemu/firmware.elf
+  -serial
+  telnet::4321,server,nowait
+  -display
+  none
+  -S
+  -gdb
+  tcp::1234
 debug_port = localhost:1234
