--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = qemu
+default_envs = vw_nc03
 
 [common]
 common_flags =
@@ -27,8 +27,7 @@ common_flags =
   -Wundef
   -Wextra
   -Wshadow
-  -Wredundant-decls
-
+  
 [env:genericSTM32F103C8]
 platform = ststm32
 board = genericSTM32F103C8
@@ -37,7 +36,7 @@ build_flags =
   ${common.common_flags}
   -DSTM32F1
   -Iinclude
-src_filter =
+build_src_filter =
   +<./>
   +<../volvo_od2/>
   -<cars/>
@@ -49,15 +48,19 @@ framework = libopencm3
 build_flags =
   ${common.common_flags}
   -DSTM32F1
+  -Iqemu/fw
+  -Iinclude
   -Wl,-Map=.pio/build/qemu/qemu.map
   -Tqemu/fw/stm32vldiscovery.ld
-src_filter =
+build_src_filter =
   +<./>
   +<../qemu/>
   -<cars/>
+build_src_flags =
+    -Iqemu/fw
 
 debug_tool = custom
-debug_server = 
+debug_server =
   qemu-system-arm
   -M
   stm32vldiscovery
@@ -71,3 +74,28 @@ debug_server =
   -gdb
   tcp::1234
 debug_port = localhost:1234
+
+
+[env:vw_nc03]
+platform = /home/Fazer/git/nuvoton_nuc131/
+board = nuvoton_nuc131
+build_flags =
+  -Wall
+  -Os
+  -std=gnu11
+  -fno-common
+  -ffunction-sections
+  -fdata-sections
+  -Wstrict-prototypes
+  -Wundef
+  -Wextra
+  -Wshadow
+  -D__NUC131__
+  -Iinclude
+  -Ivw_nc03
+  -Wl,-Map=.pio/build/vw_nc03/vw_nc03.map
+  -Tvw_nc03/NUC131.ld
+build_src_filter = +<./>, +<../vw_nc03/>, -<cars/>
+debug_tool = custom
+; debug_server = openocd, -f, interface/stlink.cfg, -f, target/nuc131.cfg
+; debug_port = :3333
