--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = vw_nc03
+default_envs = qemu
 
 [common]
 common_flags =
@@ -27,6 +27,7 @@ common_flags =
   -Wundef
   -Wextra
   -Wshadow
+  -DE_CANBOX_RAISE_VW_MQB # selects communication protocol
   
 [env:genericSTM32F103C8]
 platform = ststm32
@@ -40,6 +41,7 @@ build_src_filter =
   +<./>
   +<../volvo_od2/>
   -<cars/>
+  -<protocol/>
 
 [env:qemu]
 platform = ststm32
@@ -56,6 +58,7 @@ build_src_filter =
   +<./>
   +<../qemu/>
   -<cars/>
+  -<protocol/>
 build_src_flags =
     -Iqemu/fw
 
@@ -95,7 +98,11 @@ build_flags =
   -Ivw_nc03
   -Wl,-Map=.pio/build/vw_nc03/vw_nc03.map
   -Tvw_nc03/NUC131.ld
-build_src_filter = +<./>, +<../vw_nc03/>, -<cars/>
+build_src_filter = 
+  +<./>
+  +<../vw_nc03/>
+  -<cars/>
+  -<protocol/>
 debug_tool = custom
 ; debug_server = openocd, -f, interface/stlink.cfg, -f, target/nuc131.cfg
 ; debug_port = :3333
