--- a/platformio.ini
+++ b/platformio.ini
@@ -28,6 +28,7 @@ common_flags =
   -Wextra
   -Wshadow
   -DE_CANBOX_RAISE_VW_MQB # selects communication protocol
+  -DUSE_PEUGEOT_407=y # selects car
   
 [env:genericSTM32F103C8]
 platform = ststm32
