--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = qemu
+default_envs = genericSTM32F103C8
 
 [common]
 common_flags =
@@ -27,7 +27,7 @@ common_flags =
   -Wundef
   -Wextra
   -Wshadow
-  -DE_CANBOX_RAISE_VW_MQB # selects communication protocol
+  -DE_CANBOX_RAISE_VW_PQ # selects communication protocol
   -DUSE_PEUGEOT_407=y # selects car
   
 [env:genericSTM32F103C8]
@@ -43,6 +43,12 @@ build_src_filter =
   +<../volvo_od2/>
   -<cars/>
   -<protocol/>
+debug_tool = custom
+debug_server =
+  /home/Fazer/git/renode_portable/renode 
+  volvo_od2/volvo_od2_debug.resc 
+  --console
+debug_port = localhost:1234
 
 [env:qemu]
 platform = ststm32
