--- a/platformio.ini
+++ b/platformio.ini
@@ -45,7 +45,7 @@ build_src_filter =
   -<protocol/>
 debug_tool = custom
 debug_server =
-  /home/Fazer/git/renode_portable/renode 
+  renode 
   volvo_od2/volvo_od2_debug.resc 
   --console
 debug_port = localhost:1234
