--- a/platformio.ini
+++ b/platformio.ini
@@ -12,104 +12,100 @@
 default_envs = genericSTM32F103C8
 
 [common]
-common_flags =
-  -mcpu=cortex-m3
-  -mthumb
-  -mfix-cortex-m3-ldrd
-  -msoft-float
-  -Wall
-  -Os
-  -std=gnu99
-  -fno-common
-  -ffunction-sections
-  -fdata-sections
-  -Wstrict-prototypes
-  -Wundef
-  -Wextra
-  -Wshadow
-  -DE_CANBOX_RAISE_VW_PQ # selects communication protocol
-  -DUSE_PEUGEOT_407=y # selects car
-  
+common_flags = 
+	-mcpu=cortex-m3
+	-mthumb
+	-mfix-cortex-m3-ldrd
+	-msoft-float
+	-Wall
+	-Os
+	-std=gnu99
+	-fno-common
+	-ffunction-sections
+	-fdata-sections
+	-Wstrict-prototypes
+	-Wundef
+	-Wextra
+	-Wshadow
+	-DE_CANBOX_RAISE_VW_PQ
+	-DUSE_PEUGEOT_407=y
+
 [env:genericSTM32F103C8]
 platform = ststm32
 board = genericSTM32F103C8
 framework = libopencm3
-build_flags =
-  ${common.common_flags}
-  -DSTM32F1
-  -Iinclude
-build_src_filter =
-  +<./>
-  +<../volvo_od2/>
-  -<cars/>
-  -<protocol/>
+build_flags = 
+	${common.common_flags}
+	-DSTM32F1
+	-Iinclude
+build_src_filter = 
+	+<./>
+	+<../volvo_od2/>
+	-<cars/>
+	-<protocol/>
 debug_tool = custom
-debug_server =
-  renode 
-  volvo_od2/volvo_od2_debug.resc 
-  --console
+debug_server = 
+	renode
+	volvo_od2/volvo_od2_debug.resc
+	--console
 debug_port = localhost:1234
+
 
 [env:qemu]
 platform = ststm32
 board = disco_f100rb
 framework = libopencm3
-build_flags =
-  ${common.common_flags}
-  -DSTM32F1
-  -Iqemu/fw
-  -Iinclude
-  -Wl,-Map=.pio/build/qemu/qemu.map
-  -Tqemu/fw/stm32vldiscovery.ld
-build_src_filter =
-  +<./>
-  +<../qemu/>
-  -<cars/>
-  -<protocol/>
-build_src_flags =
-    -Iqemu/fw
-
+build_flags = 
+	${common.common_flags}
+	-DSTM32F1
+	-Iqemu/fw
+	-Iinclude
+	-Wl,-Map=.pio/build/qemu/qemu.map
+	-Tqemu/fw/stm32vldiscovery.ld
+build_src_filter = 
+	+<./>
+	+<../qemu/>
+	-<cars/>
+	-<protocol/>
+build_src_flags = -Iqemu/fw
 debug_tool = custom
-debug_server =
-  qemu-system-arm
-  -M
-  stm32vldiscovery
-  -kernel
-  .pio/build/qemu/firmware.elf
-  -serial
-  telnet::4321,server,nowait
-  -display
-  none
-  -S
-  -gdb
-  tcp::1234
+debug_server = 
+	qemu-system-arm
+	-M
+	stm32vldiscovery
+	-kernel
+	.pio/build/qemu/firmware.elf
+	-serial
+	telnet::4321,server,nowait
+	-display
+	none
+	-S
+	-gdb
+	tcp::1234
 debug_port = localhost:1234
-
 
 [env:vw_nc03]
 platform = /home/Fazer/git/nuvoton_nuc131/
 board = nuvoton_nuc131
-build_flags =
-  -Wall
-  -Os
-  -std=gnu11
-  -fno-common
-  -ffunction-sections
-  -fdata-sections
-  -Wstrict-prototypes
-  -Wundef
-  -Wextra
-  -Wshadow
-  -D__NUC131__
-  -Iinclude
-  -Ivw_nc03
-  -Wl,-Map=.pio/build/vw_nc03/vw_nc03.map
-  -Tvw_nc03/NUC131.ld
+build_flags = 
+	-Wall
+	-Os
+	-std=gnu11
+	-fno-common
+	-ffunction-sections
+	-fdata-sections
+	-Wstrict-prototypes
+	-Wundef
+	-Wextra
+	-Wshadow
+	-D__NUC131__
+	-Iinclude
+	-Ivw_nc03
+	-Wl,-Map=.pio/build/vw_nc03/vw_nc03.map
+	-Tvw_nc03/NUC131.ld
 build_src_filter = 
-  +<./>
-  +<../vw_nc03/>
-  -<cars/>
-  -<protocol/>
+	+<./>
+	+<../vw_nc03/>
+	-<cars/>
+	-<protocol/>
 debug_tool = custom
-; debug_server = openocd, -f, interface/stlink.cfg, -f, target/nuc131.cfg
-; debug_port = :3333
