--- a/platformio.ini
+++ b/platformio.ini
@@ -27,7 +27,7 @@ common_flags =
 	-Wundef
 	-Wextra
 	-Wshadow
-	-DE_CANBOX_RAISE_VW_PQ
+	-DE_CANBOX_HIWORLD_PSA_PF2
 	-DUSE_PEUGEOT_407=y
 
 [env:genericSTM32F103C8]
